--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +44,7 @@
     "prettier": "^1.18.2",
     "react-app-rewired": "^2.1.3",
     "react-hot-loader": "^4.12.14",
-    "redbox-react": "^1.6.0"
+    "redbox-react": "^1.6.0",
+    "gh-pages": "^1.2.0"
   }
 }
