--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.23.5",
-    "echarts": "^4.3.0",
-    "lodash": "^4.17.15",
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.6.5",
+    "echarts": "^4.9.0",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
-    "react": "^16.10.2",
+    "ramda": "^0.27.1",
+    "react": "^16.13.1",
     "react-autobind": "^1.0.6",
-    "react-dom": "^16.10.2",
-    "react-scripts": "^3.2.0",
-    "spectacle": "^5.7.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3",
+    "spectacle": "^6.2.0",
     "spectacle-scripts": "2.4.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "precommit": "lint-staged",
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
+    "start": "craco  start",
+    "build": "craco  build",
+    "test": "craco  test",
     "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
@@ -37,15 +37,14 @@
   ],
   "devDependencies": {
     "babel-plugin-import": "^1.12.2",
-    "customize-cra": "^0.8.0",
+    "craco": "0.0.3",
+    "craco-less": "^1.17.0",
+    "gh-pages": "^1.2.0",
     "husky": "^3.0.8",
     "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "lint-staged": "^9.4.1",
     "prettier": "^1.18.2",
-    "react-app-rewired": "^2.1.3",
     "react-hot-loader": "^4.12.14",
-    "redbox-react": "^1.6.0",
-    "gh-pages": "^1.2.0"
+    "redbox-react": "^1.6.0"
   }
 }
